--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,21 @@
-<my-app>loading</my-app>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <title>Angular Bookstore</title>
+  <base href="/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@700;600&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.css" />
+</head>
+<bs-root>
+  <div class="ui active inverted dimmer">
+    <div class="ui text loader large">Coronify</div>
+  </div>
+</bs-root>
+
+</html>
